checkout culqi casi terminado

--- a/src/app/alumno/pages/pagos/pagos.component.html
+++ b/src/app/alumno/pages/pagos/pagos.component.html
@@ -42,8 +42,8 @@
                                             </div>
                                         </div>
                                         <div class="col-6 position-relative">
-                                            <figure class="coverimg position-absolute w-100 h-100 start-0 top-0 m-0" style="background-image: url('{{courses.course.detail.other_description.url_img_banner_main}}');border-radius: 7px;">
-                                                <img src="{{courses.course.detail.other_description.url_img_banner_main}}" class="mw-100" alt="" style="display: none;">
+                                            <figure class="coverimg position-absolute w-100 h-100 start-0 top-0 m-0" style="background-image: url({{courses.course.diplomado_name.information.img_banner}});border-radius: 7px;">
+                                                <img src="{{courses.course.diplomado_name.information.img_banner}}" class="mw-100" alt="" style="display: none;">
                                             </figure>
                                         </div>
                                     </div>
