--- a/src/app/ventas/pages/registro/fichas/fichas.component.html
+++ b/src/app/ventas/pages/registro/fichas/fichas.component.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col text-end mb-3">
         <p class="text-secondary small">
-            <span class="badge badge-sm bg-yellow">Información</span>
-            <span class="badge badge-sm bg-red mx-2">No Contesta</span>
-            <span class="badge badge-sm bg-blue mx-2">No Interesado</span>
-            <span class="badge badge-sm bg-green mx-2">Próximo Grupo</span>
+            <span class="badge badge-sm bg-blue">Información</span>
+            <span class="badge badge-sm bg-orange mx-2">No Contesta</span>
+            <span class="badge badge-sm bg-red">No Interesado</span>
+            <span class="badge badge-sm bg-black mx-2">Próximo Grupo</span>
+            <span class="badge badge-sm bg-green">Compromiso Matrícula</span>
         </p>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12">
@@ -27,10 +28,11 @@
                 <tr *ngFor="let valalumnos of fichas, index as id">
                     <td>{{id+1}}</td>
                     <td>
-                        <i class="bi bi-info-circle text-warning rounded" *ngIf="valalumnos.seguimiento.informacion.length>0"></i>
-                        <i class="bi bi-person-dash text-info rounded" *ngIf="valalumnos.seguimiento.no_interesado.length>0"></i>
-                        <i class="bi bi-telephone-x text-danger rounded" *ngIf="valalumnos.seguimiento.no_contesta.length>0"></i>
-                        <i class="bi bi-person-workspace text-success rounded" *ngIf="valalumnos.seguimiento.proximo_grupo.length>0"></i>
+                        <i class="bi bi-info-circle text-info rounded" *ngIf="valalumnos.seguimiento.informacion.length>0"></i>
+                        <i class="bi bi-person-dash text-danger rounded mx-1" *ngIf="valalumnos.seguimiento.no_interesado.length>0"></i>
+                        <i class="bi bi-telephone-x text-warning rounded" *ngIf="valalumnos.seguimiento.no_contesta.length>0"></i>
+                        <i class="bi bi-person-workspace text-dark rounded mx-1" *ngIf="valalumnos.seguimiento.proximo_grupo.length>0"></i>
+                        <i class="bi bi-cash-coin text-success rounded" *ngIf="valalumnos.seguimiento.proximo_grupo.length>0"></i>
                         {{valalumnos.names}}
                     </td>
                     <td class="text-center">{{valalumnos.num_doc}}</td>
@@ -322,7 +324,8 @@
 <ng-template #seguimiento let-modal>
     <form [formGroup]="formSeguimiento" class="card border-0 border-left-5 border-theme bg-gradient-theme-light">
         <div class="card-header">
-            <h5 class="mb-1 title">REGISTRO SEGUIMIENTO</h5>
+            <h5 class="mb-1">REGISTRO SEGUIMIENTO</h5>
+            <p class="text-secondary title">{{data_detail.names}}</p>
         </div>
         <div class="card-body modal-body">
             <div class="row was-validated mb-3">
@@ -344,7 +347,7 @@
                         <div class="input-group input-group-lg">
                             <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-calendar"></i></span>
                             <div class="form-floating">
-                                <input formControlName="fecha" type="date" class="form-control border-start-0" autocomplete="off" required>
+                                <input formControlName="fecha" type="datetime-local" class="form-control border-start-0" autocomplete="off" required>
                             </div>
                         </div>
                         <small class="text-muted">Ingresar Fecha</small>
@@ -373,10 +376,11 @@
                         <div class="col">
                             <h6 class="fw-medium mb-0">Historial Seguimiento</h6>
                             <p class="text-secondary small">
-                                <span class="badge badge-sm bg-yellow">Información</span>
-                                <span class="badge badge-sm bg-red mx-2">No Contesta</span>
-                                <span class="badge badge-sm bg-blue mx-2">No Interesado</span>
-                                <span class="badge badge-sm bg-green mx-2">Próximo Grupo</span>
+                                <span class="badge badge-sm bg-blue">Información</span>
+                                <span class="badge badge-sm bg-orange mx-2">No Contesta</span>
+                                <span class="badge badge-sm bg-red">No Interesado</span>
+                                <span class="badge badge-sm bg-black mx-2">Próximo Grupo</span>
+                                <span class="badge badge-sm bg-green">Compromiso Matrícula</span>
                             </p>
                         </div>
                     </div>
