--- a/src/app/ventas/pages/registro/registro.component.html
+++ b/src/app/ventas/pages/registro/registro.component.html
@@ -23,7 +23,7 @@
                         <div class="panel panel-primary">
                             <div class="tab-menu-heading">
                                 <div class="tabs-menu">
-                                    <ul ngbNav #nav="ngbNav" [activeId]="1" class="panel-tabs nav" style="justify-content: center;">
+                                    <ul ngbNav #nav="ngbNav" [activeId]="1" class="panel-tabs nav">
                                         <li class="me-2 mb-1" [ngbNavItem]="1">
                                             <a ngbNavLink><i class="bi bi-star-fill"></i> Leads - Base Extra</a>
                                             <ng-template ngbNavContent>
@@ -320,7 +320,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-6 col-md-6 mb-2">
+                <!-- <div class="col-sm-12 col-lg-6 col-md-6 mb-2">
                     <div class="form-group mb-2 position-relative">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-key"></i></span>
@@ -334,7 +334,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-sm-12 col-lg-6 col-md-6 mb-2">
                     <div class="form-group mb-2 position-relative">
                         <div class="input-group input-group-lg">
